# opengl_graphics

./: .gitignore  CMakeLists.txt  README.md  frag.frag  main.cpp  main2.cpp  main3.cpp  vertex.shader
Core/: CMakeLists.txt  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h
Core/ImageLoader/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Core/ImageLoader/Core/: Makefile
builds/: CMakeCache.txt  Makefile  c.txt  cmake_install.cmake  main  s.json
shaders/: fragment.fs  vertex.vs
